# ente

infra/ml/test/ground_truth/: _runtime.py
mobile/apps/photos/: pubspec.yaml
mobile/apps/photos/assets/natural_search/: developer_message.txt  example_dynamic_prompt_context.JSON  tool_schema_search_photos_v1.JSON
mobile/apps/photos/lib/l10n/: intl_en.arb
mobile/apps/photos/lib/models/search/: search_constants.dart  search_types.dart
mobile/apps/photos/lib/services/: magic_cache_service.dart  search_service.dart
mobile/apps/photos/lib/services/machine_learning/: ml_computer.dart
mobile/apps/photos/lib/services/machine_learning/natural_search/: example_dynamic_prompt_context.JSON  function_gemma_natural_search_model.dart  natural_search_service.dart
mobile/apps/photos/lib/ui/tools/editor/image_editor/: image_editor_page.dart
mobile/apps/photos/lib/ui/viewer/actions/: file_selection_actions_widget.dart
mobile/apps/photos/lib/ui/viewer/file/: zoomable_image.dart
mobile/apps/photos/lib/ui/viewer/gallery/: gallery_app_bar_widget.dart  photos_lane.dart
mobile/apps/photos/lib/ui/viewer/search/: search_suggestions.dart  search_widget.dart
mobile/apps/photos/lib/ui/viewer/search/result/: search_result_widget.dart
mobile/apps/photos/lib/utils/: file_util.dart
mobile/apps/photos/lib/utils/isolate/: isolate_operations.dart
mobile/apps/photos/rust/: Cargo.toml
mobile/apps/photos/rust/src/api/: functiongemma_api.rs  mod.rs
mobile/apps/photos/rust_builder/cargokit/: build_pod.sh
mobile/apps/photos/rust_builder/ios/: ente_photos_rust.podspec
mobile/apps/photos/rust_builder/macos/: ente_photos_rust.podspec
mobile/apps/photos/test/services/: natural_search_service_test.dart
rust/bindings/frb/photos/src/api/: image_processing_api.rs
rust/crates/image/: Cargo.toml
rust/crates/image/src/: color_management.rs  decode.rs
rust/crates/photos/src/ml/: onnx.rs  runtime.rs
