[package]
name = "ente-image"
edition = "2024"

[dependencies]
fast_image_resize = { version = "5.5.0", features = ["image"] }
image = { version = "0.25.10", default-features = true }
jxl-bitstream = "=1.1.0"
jxl-oxide = { version = "0.12.6", features = ["image"] }
kamadak-exif = "0.6.1"
ente_heic = { package = "heic_decoder", git = "https://github.com/ente/heic-decoder.git", rev = "3fd83f1c1f0c88b8c4b511355b4041c7bb2d393b", features = [
    "image-integration",
] }
moxcms = { version = "0.8.1", features = ["in_place"] }
# Fork `main`: adds embedded JPEG/dimension inspection and the owned RGB8 path
# needed by the 54MP development/preview fallback policy.
rawler = { git = "https://github.com/laurens-pilot/dnglab.git", rev = "49cc3f608254057282e1416b12cc8cf9cef51faa" }
thiserror.workspace = true
tiff = "0.10.3"
